MonetDB/src/mal/Tests/tst109.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2002, CWI. All rights reserved.
# compiled for i686-pc-linux-gnu/32bit.
# gdk_dbfarm:/ufs/mk/monet_5-0/Linux/../dbfarm
# gdk_dbname:demo
# gdk_dbdir:/ufs/mk/monet_5-0/Linux/../dbfarm/demo
# gdk_distr:/ufs/mk/monet_5-0/Linux
# monetrc:/ufs/mk/.monet.conf
## Error, illegal block weaveing 
## analyse the basic interpreter loop
#
#	i:=0;
#barrier	v:=1;
#	leave v;
#	i:= 1;
#barrier t:= i<3;
#	i:=i+1;
#exit	v;
#	redo t;
#exit	t;
#	i:= 0;
#
!ERROR: exit-label 'v' doesnot match 't' in main[7]
!ERROR: exit-label 't' doesnot match 'v' in main[9]
!ERROR: exit-label 'v' doesnot match 't' in main[7]
function Admin.main():int; #0:(main:int)
    i := 0; #1:(i:int)<-($2:int)
barrier v := 1; #2:(v:int)<-($4:int)
    leave v; #3:(v:int)
    i := 1; #4:(i:int)<-($4:int)
barrier t := calc.<(i,3); #5:(t:bit)<-(i:int)($6:int)
    i := calc.+(i,1); #6:(i:int)<-(i:int)($4:int)
exit v; #7:(v:int)
    redo t ; #8:(t:bit)
exit t; #9:(t:bit)
    i := 0; #10:(i:int)<-($2:int)
end main; #11:
!ERROR: SyntaxError:Admin.main[0]:'Admin.main' contains errors
>